--- a/empty-example/index.html
+++ b/empty-example/index.html
@@ -7,13 +7,14 @@
   <title>p5.js example</title>
   <style>
     body {
-      padding: 0;
-      margin: 0;
+      padding: 50;
+      margin: 50;
     }
   </style>
   <script src="../p5.js"></script>
   <!-- <script src="../addons/p5.sound.js"></script> -->
-  <script src="sketch.js"></script>
+  <!-- <script src="sketch.js"></script> -->
+  <script src="bigCircles.js"></script>
 </head>
 
 <body>
